vpc.tf
# vpc
resource "aws_vpc" "saa_milestone" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  instance_tenancy     = "default"

  tags = {
    Name = "SAA Milestone"
  }
}
